<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ie.kyle.memorygame.GameLevelActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/level"
        android:id="@+id/game_tv_level"
        android:layout_marginStart="93dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/game_tv_curlevel"
        android:layout_above="@+id/game_tv_score"
        android:layout_toEndOf="@+id/game_tv_level"
        android:layout_marginStart="58dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/score"
        android:id="@+id/game_tv_score"
        android:layout_below="@+id/game_tv_level"
        android:layout_alignStart="@+id/game_tv_level" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/game_tv_curscore"
        android:layout_below="@+id/game_tv_curlevel"
        android:layout_alignStart="@+id/game_tv_curlevel" />

    <ie.kyle.ui.GameView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/game_cv_gameview"
        android:layout_below="@+id/game_tv_score"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/game_pb_countdown"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/game_btn_start"
        android:layout_alignTop="@+id/game_tv_level"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/game_tv_score"
        android:text="@string/show_moves" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/game_pb_countdown"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <android.gesture.GestureOverlayView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/game_gov_gestures"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/game_cv_gameview"></android.gesture.GestureOverlayView>

</RelativeLayout>
